--- a/Zastoji/MainWindow.xaml
+++ b/Zastoji/MainWindow.xaml
@@ -60,7 +60,7 @@
               <Label x:Name="Rezultat" Width="150" Margin="80,10,0,5" Foreground="Red" Grid.Column="2" Grid.Row="1" VerticalAlignment="Bottom" />
                <Label Grid.Column="0" Grid.Row="2" VerticalAlignment="Bottom" FontStyle="Italic" FontSize="10">Izradio: Darko Eller</Label>       
        <xctk:Calculator Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" />
-        <Image Width="180" Height="180" Grid.Column="0" Grid.Row="2" Source="pack://siteoforigin:,,,/Resources/thinking.png"/>
+        <Image Width="180" Height="180" Grid.Column="0" Grid.Row="2" Source="/Resources/thinking.png"/>
         <Grid Grid.Row="1" Grid.Column="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
