--- a/Zastoji/MainWindow.xaml
+++ b/Zastoji/MainWindow.xaml
@@ -1,84 +1,113 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Zastoji"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="Zastoji.MainWindow"
-        mc:Ignorable="d"
-        Title="Vrijeme zastoja / rada" Height="450" Width="750" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:Zastoji"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" x:Class="Zastoji.MainWindow"
+    mc:Ignorable="d"
+    Title="Vrijeme zastoja / rada" Height="455" Width="765" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Column="0" 
-                   Grid.Row="0" 
+        <TextBlock Grid.Column="0"
+                   Grid.Row="0"
                    Grid.ColumnSpan="3"
                    VerticalAlignment="Center"
-                   HorizontalAlignment="Center" 
-                   FontSize="16" 
+                   HorizontalAlignment="Center"
+                   FontSize="16"
                    TextDecorations="Underline"
-                   Margin="0,10"
-                   >IZRAČUNAJTE VRIJEME ZASTOJA ILI RADA</TextBlock>
+                   Margin="0,10">
+            IZRAČUNAJTE VRIJEME ZASTOJA ILI RADA
+        </TextBlock>
         <StackPanel Margin="30,0,0,0" Orientation="Vertical" Grid.Column="0" Grid.Row="1">
-            <Label Content="Odaberite početno vrijeme zastoja:"></Label>
-           <xctk:DateTimePicker x:Name="DtPocetnoVrijeme"  
-                             HorizontalAlignment="Left"  
-                             VerticalAlignment="Top" 
-                             Width="160"
-                             Margin="20,5,0,0"   
-                             FormatString="dd.MM.yyyy. HH:mm" 
-                             CultureInfo="hr-HR" 
-                             Format="Custom" FontSize="14"/>                               
+            <Label Content="Odaberite početno vrijeme zastoja:" />
+            <xctk:DateTimePicker x:Name="DtPocetnoVrijeme"
+                                 HorizontalAlignment="Left"
+                                 VerticalAlignment="Top"
+                                 Width="160"
+                                 Margin="20,5,0,0"
+                                 FormatString="dd.MM.yyyy. HH:mm"
+                                 CultureInfo="hr-HR"
+                                 Format="Custom" FontSize="14" />
 
         </StackPanel>
         <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="1">
-                        <Label Content="Odaberite završno vrijeme zastoja:"></Label>
-           <xctk:DateTimePicker x:Name="DtZavrnoVrijeme"  
-                             HorizontalAlignment="Left"  
-                             VerticalAlignment="Top" 
-                             Width="160"
-                             Margin="20,5,0,0"
-                             Format="Custom"
-                             FormatString="dd.MM.yyyy. HH:mm" CultureInfo="hr-HR" FontSize="14"/> 
-            <Button x:Name="IzracunajVrijeme" 
-                    Content="Izračunaj razliku" 
-                    VerticalAlignment="Bottom" 
+            <Label Content="Odaberite završno vrijeme zastoja:" />
+            <xctk:DateTimePicker x:Name="DtZavrnoVrijeme"
+                                 HorizontalAlignment="Left"
+                                 VerticalAlignment="Top"
+                                 Width="160"
+                                 Margin="20,5,0,0"
+                                 Format="Custom"
+                                 FormatString="dd.MM.yyyy. HH:mm" CultureInfo="hr-HR" FontSize="14" />
+            <Button x:Name="IzracunajVrijeme"
+                    Content="Izračunaj razliku"
+                    VerticalAlignment="Bottom"
                     Click="IzracunajVrijeme_Click"
                     Width="120"
                     Height="25"
-                    Margin="0,20,0,10"/>
+                    Margin="0,20,0,10" />
 
         </StackPanel>
-              <Label x:Name="Rezultat" Width="150" Margin="80,10,0,5" Foreground="Red" Grid.Column="2" Grid.Row="1" VerticalAlignment="Bottom" />
-               <Label Grid.Column="0" Grid.Row="2" VerticalAlignment="Bottom" FontStyle="Italic" FontSize="10">Izradio: Darko Eller</Label>       
-       <xctk:Calculator Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" />
-        <Image Width="180" Height="180" Grid.Column="0" Grid.Row="2" Source="/Resources/thinking.png"/>
+        <Label x:Name="Rezultat" Width="150" Margin="80,10,0,5" Foreground="Red" Grid.Column="2" Grid.Row="1"
+               VerticalAlignment="Bottom" />
+        <Label Grid.Column="0" Grid.Row="2" VerticalAlignment="Bottom" FontStyle="Italic" FontSize="10">Izradio: Darko Eller</Label>
+        <xctk:Calculator Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" Margin="5" />
+        <StackPanel Grid.Column="0" Grid.Row="2" />
         <Grid Grid.Row="1" Grid.Column="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-              <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-         <StackPanel Orientation="Vertical" Grid.Column="0" Height="90" VerticalAlignment="Top">
-            <TextBlock HorizontalAlignment="Right" Margin="0,5,0,10">Dani:</TextBlock> 
-             <TextBlock HorizontalAlignment="Right" Margin="0,0,0,10">Sati:</TextBlock>
-             <TextBlock HorizontalAlignment="Right" >Minute:</TextBlock>
-         </StackPanel> 
-             <StackPanel Orientation="Vertical" Grid.Column="1" Height="90" VerticalAlignment="Top">
-                 <Label x:Name="LblDani"/>
-                 <Label x:Name="LblSati"/>
-                 <Label x:Name="LblMinute"/>
-         </StackPanel>            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <StackPanel Orientation="Vertical" Grid.Column="1" Height="90" VerticalAlignment="Top">
+                <TextBlock HorizontalAlignment="Right" Margin="0,5,0,10">Dani:</TextBlock>
+                <TextBlock HorizontalAlignment="Right" Margin="0,0,0,10">Sati:</TextBlock>
+                <TextBlock HorizontalAlignment="Right">Minute:</TextBlock>
+            </StackPanel>
+            <StackPanel Orientation="Vertical" Grid.Column="2" Height="90" VerticalAlignment="Top">
+                <Label x:Name="LblDani" />
+                <Label x:Name="LblSati" />
+                <Label x:Name="LblMinute" />
+            </StackPanel>
+            <StackPanel Grid.Column="0">
+                <RadioButton GroupName="RadNerad" x:Name="RadBtnZastoj" IsChecked="True" Margin="5">Zastoj</RadioButton>
+                <RadioButton GroupName="RadNerad" x:Name="RadBtnRad" Margin="5">Rad</RadioButton>
+            </StackPanel>
+        </Grid>
+        <Grid Grid.Row="2" Grid.Column="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Column="0" Grid.Row="0" Margin="5">
+                <TextBlock HorizontalAlignment="Center">Kumulativ zastoja</TextBlock>
+                <ListBox x:Name="ListaZastoja" Height="100" HorizontalContentAlignment="Right" />
+                <Label Foreground="Red" x:Name="UkupnoZastoja" Margin="5" />
+                <Button x:Name="BtnOcistiListuZastoja" Click="BtnOcistiListuZastoja_Click">Očisti listu zastoja</Button>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Grid.Row="0" Margin="5">
+                <TextBlock HorizontalAlignment="Center">Kumulativ rada</TextBlock>
+                <ListBox x:Name="ListaRada" Height="100" HorizontalContentAlignment="Right" />
+                <Label Foreground="Red" x:Name="UkupnoRada" Margin="5" />
+                <Button x:Name="BtnOcistiListuRada" Click="BtnOcistiListuRada_Click">Očisti listu rada</Button>
+            </StackPanel>
+
         </Grid>
     </Grid>
 </Window>
